--- a/templates/tabsController.html
+++ b/templates/tabsController.html
@@ -6,5 +6,8 @@
         <ion-tab style="" title="m3u8" icon="ion-ios-videocam-outline" href="#/page1/page3">
             <ion-nav-view name="tab2"></ion-nav-view>
         </ion-tab>
+        <ion-tab style="" title="mp4" icon="ion-ios-videocam-outline" href="#/page1/page4">
+            <ion-nav-view name="tab4"></ion-nav-view>
+        </ion-tab>
     </ion-tabs>
 </ion-view>
